--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
     <figcaption>Cats <em>love</em> lasagna.</figcaption>  
   </figure>
+</section>
+<section>
+  <h2>Cat Form</h2>
+  <form action="https://freecatphotoapp.com/submit-cat-photo">
+    <input type="text" name="catphotourl" placeholder="cat photo URL">
   
    
 </body>
