--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CatPhotoApp</title>
 </head>
 <body>
     <h1>CatPhotoApp</h1>
@@ -48,11 +48,17 @@
             <input id="loving" type="checkbox" name="personality"> <label for="loving">Loving</label>
             <input id="lazy" type="checkbox" name="personality"> <label for="lazy">Lazy</label>
             <input id="energetic" type="checkbox" name="personality"> <label for="energetic"> Energetic</label>
-          </fieldset> <legend>What's your cat's personality?</legend>
-          <input id="loving" type="checkbox" name="personality"> <label for="loving">Loving</label>
-          <input id="lazy" type="checkbox" name="personality"> <label for="lazy">Lazy</label>
-          <input id="energetic" type="checkbox" name="personality"> <label for="energetic"> Energetic</label>
-        </fieldset>
+          </fieldset> 
+          <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+          <button type="submit">Submit</button>
+        </form>
+      </section>
+    </main>
+    <footer>
+      <p>
+        No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
+      </p>
+    </footer>
       
 </body>
 </html>
